--- a/app/src/main/res/drawable/sensor_on_body.xml
+++ b/app/src/main/res/drawable/sensor_on_body.xml
@@ -2,12 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="oval">
-            <solid android:color="#FFFF00"/>
+            <solid android:color="#5f090a"/>
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="oval">
-            <solid android:color="#FFFF00"/>
+            <solid android:color="#5f090a"/>
         </shape>
     </item>
 </selector>
